# image-to-static-array

./: .gitignore  Cargo.toml  README.md
src/: main.rs  to_mono.rs  to_u32.rs  to_u8.rs
