[package]
name = "image_to_static_vec"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.57"
